<resources>
    <string name="app_name">Sahara</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cartToolText">Cart Navigator</string>
    <string name="Sahara">Sahara</string>
    <string name="homeToolText">Home Navigator</string>
    <string name="catalogToolText">Catalog Navigator</string>
    <string name="placeholderItemName">Item Name Placeholder</string>
    <string name="placeholderItemPrice">Item Price Placeholder</string>
    <string-array name="item_array">
        <item>All</item>
        <item>Shirts</item>
        <item>Pants</item>
    </string-array>
    <string name="about">About</string>
    <string name="support">Support</string>
    <string name="catalog">Catalog</string>
    <string name="item">Item</string>
    <string name="cart">Cart</string>
    <string name="app_home_h1">Welcome To Sahara</string>
    <string name="app_home_h2">Check out the Deals!</string>
  
    <string name="app_about_h1">About Sahara</string>
    <string name="app_about_h2">Present</string>
    <string name="app_about_p">Currently we have a database connected to the app so it dynamically
        stores and generates items.
        We have a drawer for navigation, cart fragment for items the user is interested in.
    </string>
    <string name="app_about_h2_2">Future</string>
    <string name="app_about_p2">In the future we will have a fully integrated ecommerce
    Store that communicates with an external server
     </string>


    <!-- Cart Item Strings -->
    <string name="cart_fragment_title">Shopping Cart</string>
    <string name="cart_fragment_subtotal_prompt">Subtotal</string>
    <string name="cart_fragment_total_price_filler">$0.00</string>
    <string name="cart_fragment_button_text">Purchase</string>
    <string name="cart_item_quantity_prompt">Quantity:</string>
    <string-array name="quantity_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="itemLabelHint">Item Label</string>
    <string name="itemDescPlaceholder">Item Description</string>
    <string name="itemPricePlaceholder">Item Price</string>
    <string name="sizeGroupLabel">Pick a Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="xl">Xl</string>
    <string name="addToCart">Add Item To Cart</string>
    <string name="catalog_filter_prompt">Filter</string>
    <string name="support_title">Sahara Support</string>
    <string name="support_about">If you have any trouble with using our services, please contact us! From trouble logging in, to trouble with shipping,
    our associates are always here to help.</string>
    <string name="account_support">Account Issues</string>
    <string name="product_support">Product Support</string>
    <string name="anything_else_support">If your issue is not listed here, please feel free to contact us at support@sahara.com </string>
</resources>