<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/Sahara">
        <menu>
            <item
                android:id="@+id/homeFragment"
                android:title="@string/homeToolText"
                android:icon="@drawable/icon_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <item
                android:id="@+id/catalogFragment"
                android:title="@string/catalogToolText"
                android:icon="@drawable/icon_catalog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <item
                android:id="@+id/aboutFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/about"
                android:icon="@drawable/about"/>
            <item
                android:id="@+id/supportFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/support"
                android:icon="@drawable/contact_support"/>

        </menu>
    </item>

</menu>